<resources>
    <string name="app_name">BarberApp</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="remember_me">Remember Me</string>
    <string name="welcome_to_barberapp">Welcome to BarberApp</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="or">OR</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_in">Sign in</string>
    <string name="my_appointments">My Appointments</string>
    <string name="new_appointment">New Appointment</string>
    <string name="select_treatment">Select treatment</string>
    <string name="search_treatment">Search Treatment</string>
    <string name="select_barber">Select barber</string>
    <string name="contact_number">Contact number</string>
    <string name="search">Search</string>
    <string name="already_have_an_account">Already have an account ? </string>
    <string name="upload_image">Upload Image </string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="log_out">Log out</string>
    <string name="edit_contact">Edit contact number</string>
    <string name="active_appointments">Active Appointments</string>
    <string name="expired_appointments">Expired Appointments</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="enter_treatment">Enter Treatment</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="enter_barber">Enter Barber</string>
    <string name="edit_options">Edit Options</string>
    <string name="enter_duration">Duration (min)</string>
    <string name="select_days">Select Days</string>
    <string name="days_off_selection">Days Off Selection</string>


    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="years">
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
    </string-array>


</resources>