<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.AppointmentActivity">

    <TextView
        android:id="@+id/treatment_preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/treatment_preferences"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/select_treatment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/treatment_preferences"
        android:layout_marginTop="72dp"
        android:background="@android:drawable/editbox_background"
        android:drawableEnd="@android:drawable/arrow_down_float"
        android:drawablePadding="16dp"
        android:hint="@string/select_treatment"
        android:padding="12dp" />

    <TextView
        android:id="@+id/select_barber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_treatment"
        android:layout_marginTop="32dp"
        android:background="@android:drawable/editbox_background"
        android:drawableEnd="@android:drawable/arrow_down_float"
        android:drawablePadding="16dp"
        android:hint="@string/select_barber"
        android:padding="12dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contact_number_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_barber"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/contact_number">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contact_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textSize="16sp" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact_number_layout"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="@color/my_blue"
        android:text="@string/search"
        android:textAllCaps="false" />

</RelativeLayout>